# cosmwasm-cache-rebuilder

./: Cargo.toml  README.md
src/: main.rs  rebuild.rs  recache.rs  stub.rs
test/: test.wasm
test/cached/: test.wasm
